fixing mobile jumping

--- a/mobile.css
+++ b/mobile.css
@@ -6,7 +6,7 @@ body{
 	padding: 0;
 	margin:0;
 	border-width: 0;
-	z-index: -2;
+	z-index: 0
 }
 .layer1{
 	position: fixed;
@@ -22,7 +22,7 @@ body{
 	position: fixed;
 	top:5%;
 	margin:auto;
-	z-index:-1;
+	z-index:0;
 }
 .slo{
 	height: 20vh;
@@ -130,6 +130,7 @@ a{
 	width:65%;
 	display: block;
 	margin:auto;
+	z-index: 0;
 }
 #slogan{
 	color:gray;
